--- a/worksbynrfz/improve-wf copy.html
+++ b/worksbynrfz/improve-wf copy.html
@@ -7,14 +7,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Train Delays Checker | WBN</title>
+  <title>EICW - Implementation Brainstorming | WBN</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
   <meta property="og:image" content="https://i.imgur.com/kMi3VsK.png" />
 
   <link rel="icon" href="../img/core-img/favicon.png">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/style-extension-1.css">
@@ -69,7 +69,7 @@
   </header>
 
 
-  <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(https://i.imgur.com/4baefCu.png)">
+  <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(https://i.imgur.com/sBOOEqY.png)">
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-12">
@@ -82,7 +82,7 @@
                 </li>
               </ol>
             </nav>
-            <h2 class="page-title">Train Delays Checker</h2>
+            <h2 class="page-title">EICW - Implementation Brainstorming</h2>
           </div>
         </div>
       </div>
@@ -92,46 +92,51 @@
 
   <section class="wbnrfz-summ clearfix">
     <div class="wbnrfz_details wow fadeInUp" data-wow-delay="100ms">
-      <div class="container">
-        <div class="col-lg-12">
-          <div class="main-title">
-            <span>Line Status Overview</span>
-            <h1>Train Delays Checker V3 </h1>
-          </div>
-        </div>
-
-        <div class="details_catagory_wrap">
-          <div class="col-sm-3 single_catagory ">
-            <span>Category</span>
-            <h4>Website Design</h4>
-          </div>
-          <div class="col-sm-3 single_catagory">
-            <span>Project Year</span>
-            <h4>2024 (Version 3)</h4>
-          </div>
-          <div class="col-sm-3 single_catagory">
-            <span>Share Project</span>
-            <div class="social_links">
-              <a href="https://www.facebook.com/sharer/sharer.php?u=https://nurafianzulkifli.com/worksbynrfz/improve-wf.html"
-                title="Facebook">
-                <i class="fa-brands fa-facebook"></i> </a>
-              <a href="https://x.com/intent/post?url=https://nurafianzulkifli.com/worksbynrfz/improve-wf.html&text= Train Delays Checker"
-                title="X (Twitter)">
-                <i class="fa-brands fa-x-twitter"></i></a>
-              <a href="#" class="clipboard" onclick="copyToClipboard()" title="Copy Link"><i
-                  class="fa-solid fa-link"></i>
-                <p class="clipboard-copied" style="font-size: 12px;"></p>
-              </a>
+      <div class="container container-xxl">
+        <div class="row justify-content-center">
+          <div class="col-lg-12">
+            <div class="main-title">
+              <span>LTA's New Wayfinding System</span>
+              <h1>Experimenting Improvements of Current Wayfinding</h1>
             </div>
-          </div>
-          <div class="single_catagory">
-            <a class="btn wbnrfz_btn" href="https://nurafianzulkifli.github.io/train-delays-checker-v3/" target="_blank"><i
-                class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp;Train Delays Checker V3</a>
+            <div class="details_catagory_wrap">
+              <div class="single_catagory">
+                <span>Category</span>
+                <h4>Concepts & Replications</h4>
+              </div>
+              <div class="single_catagory">
+                <span>Project Year</span>
+                <h4>2024</h4>
+              </div>
+              <div class="single_catagory">
+                <span>Share Project</span>
+                <div class="social_links">
+                  <a href="https://www.facebook.com/sharer/sharer.php?u=https://nurafianzulkifli.com/worksbynrfz/improve-wf.html"
+                    title="Facebook">
+                    <i class="fa-brands fa-facebook"></i> </a>
+                  <a href="https://x.com/intent/post?url=https://nurafianzulkifli.com/worksbynrfz/improve-wf.html&text= EICW - Implementation Brainstorming"
+                    title="X (Twitter)">
+                    <i class="fa-brands fa-x-twitter"></i></a>
+                  <a href="#" class="clipboard" onclick="copyToClipboard()" title="Copy Link"><i
+                      class="fa-solid fa-link"></i>
+                    <p class="clipboard-copied" style="font-size: 12px;"></p>
+                  </a>
+                </div>
+              </div>
+
+            </div>
+            <div class="single_catagory">
+              <a class="btn wbnrfz_btn" href="downloads/Experimenting Improvements of Current Wayfinding.pdf"
+                download><i class="fa-solid fa-download"></i>&nbsp; Download the First
+                Edition</a>
+              <a class="btn wbnrfz_btn"
+                href="https://drive.google.com/file/d/1jKlaRXYsOWCaQVGjVIBPz8G8X-uq_GfO/view?usp=sharing"><i
+                  class="fa-solid fa-external-link"></i>&nbsp; View in Google
+                Drive</a>
+            </div>
           </div>
         </div>
       </div>
-
-    </div>
     </div>
   </section>
 
@@ -144,12 +149,13 @@
               <div class="row justify-content-center">
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
-                    <p>A pet-project of mine. Created just to keep track of
-                      train delays and breakdowns. The current features only included an Overview of Days Since Last
-                      Reported
-                      Failure, the Delays Overview, as well as Recent Incidents (i.e. Incidents History). I do wish to
-                      make this
-                      into a real-time website one day.</p>
+                    <p>A self-made handbook of how I explored different ways and ideas to
+                      make the current Wayfinding system better. <br>
+
+                    Covered in this Handbook:<br>
+                      - Design Improvements <br>
+                      - Font and Color Palettes <br>
+                      - Design Ideas Brainstorming</p>
                     </p>
                   </div>
                 </div>
@@ -158,7 +164,7 @@
 
 
             <div class="banner text-center wow fadeInUp" data-wow-delay="150ms">
-              <a href="https://i.imgur.com/bULZRTC.png" class="portfolio-img"><img src="https://i.imgur.com/bULZRTC.png"
+              <a href="https://i.imgur.com/sBOOEqY.png" class="portfolio-img"><img src="https://i.imgur.com/sBOOEqY.png"
                   class="img-fluid" alt="cover-page"></a>
             </div>
 
@@ -166,14 +172,14 @@
               <div class="row">
                 <div class="col-lg-6 col-md-6">
                   <div class="thumb">
-                    <a href="https://i.imgur.com/Hfz9sVw.png" class="portfolio-img"><img
-                        src="https://i.imgur.com/Hfz9sVw.png" class="img-fluid" alt="web-2"></a>
+                    <a href="https://i.imgur.com/W3vPlwI.png" class="portfolio-img"><img
+                        src="https://i.imgur.com/W3vPlwI.png" class="img-fluid" alt="font-col-palette"></a>
                   </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
                   <div class="thumb">
-                    <a href="https://i.imgur.com/5SxD36w.png" class="portfolio-img"><img
-                        src="https://i.imgur.com/5SxD36w.png" class="img-fluid" alt="web-3"></a>
+                    <a href="https://i.imgur.com/94YwAP9.png" class="portfolio-img"><img
+                        src="https://i.imgur.com/94YwAP9.png" class="img-fluid" alt="des-idea"></a>
                   </div>
                 </div>
               </div>
