--- a/worksbynrfz/improve-wf.html
+++ b/worksbynrfz/improve-wf.html
@@ -93,47 +93,48 @@
   <section class="wbnrfz-summ clearfix">
     <div class="wbnrfz_details wow fadeInUp" data-wow-delay="100ms">
       <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-12">
-            <div class="main-title">
-              <span>LTA's New Wayfinding System</span>
-              <h1>Experimenting Improvements of Current Wayfinding</h1>
-            </div>
-            <div class="details_catagory_wrap">
-              <div class="single_catagory">
-                <span>Category</span>
-                <h4>Concepts & Replications</h4>
-              </div>
-              <div class="single_catagory">
-                <span>Project Year</span>
-                <h4>2024</h4>
-              </div>
-              <div class="single_catagory">
-                <span>Share Project</span>
-                <div class="social_links">
-                  <a href="https://www.facebook.com/sharer/sharer.php?u=https://nurafianzulkifli.com/worksbynrfz/improve-wf.html"
-                    title="Facebook">
-                    <i class="fa-brands fa-facebook"></i> </a>
-                  <a href="https://x.com/intent/post?url=https://nurafianzulkifli.com/worksbynrfz/improve-wf.html&text= EICW - Implementation Brainstorming"
-                    title="X (Twitter)">
-                    <i class="fa-brands fa-x-twitter"></i></a>
-                  <a href="#" class="clipboard" onclick="copyToClipboard()" title="Copy Link"><i
-                      class="fa-solid fa-link"></i>
-                    <p class="clipboard-copied" style="font-size: 12px;"></p>
-                  </a>
-                </div>
-              </div>
+        <div class="col-lg-12">
+          <div class="main-title">
+            <span>LTA's New Wayfinding System</span>
+            <h1>Experimenting Improvements of Current Wayfinding</h1>
+          </div>
+        </div>
 
+        <div class="details_catagory_wrap">
+          <div class="col-sm-2 single_catagory ">
+            <span>Category</span>
+            <h4>Concepts & Replications</h4>
+          </div>
+          <div class="col-sm-2 single_catagory">
+            <span>Project Year</span>
+            <h4>2024</h4>
+          </div>
+          <div class="col-sm-2 single_catagory">
+            <span>Share Project</span>
+            <div class="social_links">
+              <a href="https://www.facebook.com/sharer/sharer.php?u=https://nurafianzulkifli.com/worksbynrfz/improve-wf.html"
+                title="Facebook">
+                <i class="fa-brands fa-facebook"></i> </a>
+              <a href="https://x.com/intent/post?url=https://nurafianzulkifli.com/worksbynrfz/improve-wf.html&text= Train Delays Checker"
+                title="X (Twitter)">
+                <i class="fa-brands fa-x-twitter"></i></a>
+              <a href="#" class="clipboard" onclick="copyToClipboard()" title="Copy Link"><i
+                  class="fa-solid fa-link"></i>
+                <p class="clipboard-copied" style="font-size: 12px;"></p>
+              </a>
             </div>
-            <div class="single_catagory">
-              <a class="btn wbnrfz_btn" href="downloads/Experimenting Improvements of Current Wayfinding.pdf"
-                download><i class="fa-solid fa-download"></i>&nbsp; Download the First
-                Edition</a>
-              <a class="btn wbnrfz_btn"
-                href="https://drive.google.com/file/d/1jKlaRXYsOWCaQVGjVIBPz8G8X-uq_GfO/view?usp=sharing"><i
-                  class="fa-solid fa-external-link"></i>&nbsp; View in Google
-                Drive</a>
-            </div>
+          </div>
+          <div class="single_catagory">
+            <a class="btn wbnrfz_btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" href="downloads/Experimenting Improvements of Current Wayfinding.pdf"
+            download><i class="fa-solid fa-download"></i>&nbsp; Download Handbooks</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="downloads/Experimenting Improvements of Current Wayfinding.pdf" download>First Edition</a></li>
+              <li><a class="dropdown-item" href="#">Second Edition</a></li>
+            </ul>
+          <a class="btn wbnrfz_btn"
+            href="https://drive.google.com/file/d/1jKlaRXYsOWCaQVGjVIBPz8G8X-uq_GfO/view?usp=sharing"><i
+              class="fa-solid fa-external-link"></i>&nbsp; View in Google
+            Drive</a>
           </div>
         </div>
       </div>
@@ -146,13 +147,13 @@
         <div class="row justify-content-center">
           <div class="col-lg-12">
             <div class="details_info">
-              <div class="row">
+              <div class="row justify-content-center">
                 <div class="col-lg-12">
-                  <div class="info">
-                    <p>A self-made handbook of how I explored different ways and ideas to
+                  <div class="info justify-content-center">
+                    <p style="text-align: center;">A self-made handbook of how I explored different ways and ideas to
                       make the current Wayfinding system better. <br>
 
-                      Covered in this Handbook:<br>
+                    Covered in this Handbook:<br>
                       - Design Improvements <br>
                       - Font and Color Palettes <br>
                       - Design Ideas Brainstorming</p>
@@ -163,7 +164,7 @@
             </div>
 
 
-            <div class="banner wow fadeInUp" data-wow-delay="150ms">
+            <div class="banner text-center wow fadeInUp" data-wow-delay="150ms">
               <a href="https://i.imgur.com/sBOOEqY.png" class="portfolio-img"><img src="https://i.imgur.com/sBOOEqY.png"
                   class="img-fluid" alt="cover-page"></a>
             </div>
@@ -225,10 +226,8 @@
 
   <script src="../js/jquery.min.js"></script>
 
-  <script src="../js/popper.min.js"></script>
-
-  <script src="../js/bootstrap.min.js"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
   <script src="../js/pw.bundle.js"></script>
 
   <script src="../js/default-assets/active.js"></script>
