--- a/worksbynrfz/delays-checker.html
+++ b/worksbynrfz/delays-checker.html
@@ -112,10 +112,10 @@
           <div class="col-sm-3 single_catagory">
             <span>Share Project</span>
             <div class="social_links">
-              <a href="https://www.facebook.com/sharer/sharer.php?u=https://nurafianzulkifli.com/worksbynrfz/improve-wf.html"
+              <a href="https://www.facebook.com/sharer/sharer.php?u=https://nurafianzulkifli.com/worksbynrfz/delays-checker.html"
                 title="Facebook">
                 <i class="fa-brands fa-facebook"></i> </a>
-              <a href="https://x.com/intent/post?url=https://nurafianzulkifli.com/worksbynrfz/improve-wf.html&text= Train Delays Checker"
+              <a href="https://x.com/intent/post?url=https://nurafianzulkifli.com/worksbynrfz/delays-checker.html&text= Train Delays Checker"
                 title="X (Twitter)">
                 <i class="fa-brands fa-x-twitter"></i></a>
               <a href="#" class="clipboard" onclick="copyToClipboard()" title="Copy Link"><i
@@ -125,8 +125,8 @@
             </div>
           </div>
           <div class="single_catagory">
-            <a class="btn wbnrfz_btn" href="https://nurafianzulkifli.github.io/train-delays-checker-v3/" target="_blank"><i
-                class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp;Train Delays Checker V3</a>
+            <a class="btn wbnrfz_btn" href="https://nurafianzulkifli.github.io/train-delays-checker-v3/"
+              target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp;Train Delays Checker V3</a>
           </div>
         </div>
       </div>
@@ -144,13 +144,12 @@
               <div class="row justify-content-center">
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
-                    <p>A pet-project of mine. Created just to keep track of
+                    <p style="text-align: center;">A pet-project of mine. Created just to keep track of
                       train delays and breakdowns. The current features only included an Overview of Days Since Last
                       Reported
                       Failure, the Delays Overview, as well as Recent Incidents (i.e. Incidents History). I do wish to
                       make this
                       into a real-time website one day.</p>
-                    </p>
                   </div>
                 </div>
               </div>
