--- a/worksbynrfz/improve-wf.html
+++ b/worksbynrfz/improve-wf.html
@@ -14,7 +14,7 @@
 
   <link rel="icon" href="../img/core-img/favicon.png">
 
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/style-extension-1.css">
@@ -125,16 +125,18 @@
             </div>
           </div>
           <div class="single_catagory">
-            <a class="btn wbnrfz_btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" href="downloads/Experimenting Improvements of Current Wayfinding.pdf"
-            download><i class="fa-solid fa-download"></i>&nbsp; Download Handbooks</a>
+            <a class="btn wbnrfz_btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"
+              href="downloads/Experimenting Improvements of Current Wayfinding.pdf" download><i
+                class="fa-solid fa-download"></i>&nbsp; Download Handbooks</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="downloads/Experimenting Improvements of Current Wayfinding.pdf" download>First Edition</a></li>
+              <li><a class="dropdown-item" href="downloads/Experimenting Improvements of Current Wayfinding.pdf"
+                  download>First Edition</a></li>
               <li><a class="dropdown-item" href="#">Second Edition</a></li>
             </ul>
-          <a class="btn wbnrfz_btn"
-            href="https://drive.google.com/file/d/1jKlaRXYsOWCaQVGjVIBPz8G8X-uq_GfO/view?usp=sharing"><i
-              class="fa-solid fa-external-link"></i>&nbsp; View in Google
-            Drive</a>
+            <a class="btn wbnrfz_btn"
+              href="https://drive.google.com/file/d/1jKlaRXYsOWCaQVGjVIBPz8G8X-uq_GfO/view?usp=sharing"><i
+                class="fa-solid fa-external-link"></i>&nbsp; View in Google
+              Drive</a>
           </div>
         </div>
       </div>
@@ -153,10 +155,10 @@
                     <p style="text-align: center;">A self-made handbook of how I explored different ways and ideas to
                       make the current Wayfinding system better. <br>
 
-                    Covered in this Handbook:<br>
+                      Covered in this Handbook:<br>
                       - Design Improvements <br>
                       - Font and Color Palettes <br>
-                      - Design Ideas Brainstorming</p>
+                      - Design Ideas Brainstorming
                     </p>
                   </div>
                 </div>
@@ -226,8 +228,12 @@
 
   <script src="../js/jquery.min.js"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+    crossorigin="anonymous"></script>
   <script src="../js/pw.bundle.js"></script>
 
   <script src="../js/default-assets/active.js"></script>
