--- a/index.html
+++ b/index.html
@@ -158,12 +158,12 @@
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 wow fadeInUp"
                     data-wow-delay="500ms">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/FC4fSsG.png" alt>
+                        <img src="https://i.imgur.com/wDvqKp1.png" alt>
                         <div class="hover-content">
                             <h4>Bus Replications</h4>
                             <a class="info" href="worksbynrfz/bus-rep.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
-                            <a href="https://i.imgur.com/FC4fSsG.png" class="portfolio-img"><i
+                            <a href="https://i.imgur.com/wDvqKp1.png" class="portfolio-img"><i
                                     class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
@@ -172,12 +172,12 @@
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 wow fadeInUp"
                     data-wow-delay="700ms">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/03mFKk0.png" alt>
+                        <img src="https://i.imgur.com/2ZDDWFy.png" alt>
                         <div class="hover-content">
                             <h4>MyTransport.SG App Redesign</h4>
                             <a class="info" href="worksbynrfz/myts-app.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
-                            <a href="https://i.imgur.com/03mFKk0.png" class="portfolio-img"><i
+                            <a href="https://i.imgur.com/2ZDDWFy.png" class="portfolio-img"><i
                                     class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
@@ -186,12 +186,12 @@
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 wow fadeInUp"
                     data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/6oNoqnp.png" alt="man-a22-mascot">
+                        <img src="https://i.imgur.com/GlYFYka.png" alt="man-a22-mascot">
                         <div class="hover-content">
                             <h4>MAN A22 Lion Mascot Replication</h4>
                             <a class="info" href="worksbynrfz/man-a22-masc.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
-                            <a href="https://i.imgur.com/6oNoqnp.png" class="portfolio-img"><i
+                            <a href="https://i.imgur.com/GlYFYka.png" class="portfolio-img"><i
                                     class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
