--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -198,12 +198,12 @@
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item md mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/03mFKk0.png" alt="myts-app">
+                        <img src="https://i.imgur.com/2ZDDWFy.png" alt="myts-app">
                         <div class="hover-content">
                             <h4>MyTransport.SG App Redesign</h4>
                             <a class="info" href="worksbynrfz/myts-app.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
-                            <a href="https://i.imgur.com/03mFKk0.png" class="portfolio-img"><i
+                            <a href="https://i.imgur.com/2ZDDWFy.png" class="portfolio-img"><i
                                     class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
@@ -212,12 +212,12 @@
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="500ms">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/FC4fSsG.png" alt="bus-rep">
+                        <img src="https://i.imgur.com/wDvqKp1.png" alt="bus-rep">
                         <div class="hover-content">
                             <h4>Bus Replications</h4>
                             <a class="info" href="worksbynrfz/bus-rep.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
-                            <a href="https://i.imgur.com/FC4fSsG.png" class="portfolio-img"><i
+                            <a href="https://i.imgur.com/wDvqKp1.png" class="portfolio-img"><i
                                     class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
